--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
+:root {
+    --leftColor: #111111;
+    --rightColor: #1c03fc;
+}
+
+body{
+    display: flex;
+    justify-content: center;
+    color: white;
+    align-items: center;
+  
+    background: #43cea2; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, var(--leftColor), var(--rightColor));
+    background: linear-gradient(to right, var(--leftColor), var(--rightColor));
+  
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  }
+
 .container {
     padding: 20vh 0px;
     
@@ -5,4 +24,39 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.counter {
+    font-size: 256px;
+    margin: 0;
+    padding: 0;
+
+    padding-bottom: 16px;
+}
+
+.buttonsContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 16px;
+    cursor: pointer;
+}
+
+.button:last-child {
+    background-color: #FF1C10;
+}
+
+.button:first-child {
+    background-color: #222222;
 }
